k8s/app-exemplo/02-Odoo/03-Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
spec:
  type: ClusterIP
  selector:
    app: odoo
  ports:
    - protocol: TCP
      port: 8069
      targetPort: 8069
