k8s/app-exemplo/02-Odoo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odoo-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: treinamento.tcloud-devops.cloudtotvs.com.br.
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: treinamento.tcloud-devops.cloudtotvs.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odoo-service
                port:
                  number: 8069
  tls:
    - hosts:
        - treinamento.tcloud-devops.cloudtotvs.com.br
      secretName: odoo-secret-prod
